# WCD

./: .gitignore  CMakeLists.txt  README.md  WCD.sln  WCD.vcxproj.filters  test_sign.bat
WCD/: CMakeLists.txt  WCD.inf  WCD.vcxproj  WCDCommon.h  wcd.cpp
WCDClient/: CMakeLists.txt  WCDClient.cpp
